Add user profile request
